worked on intro
a slow but steady process

--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -111,9 +111,15 @@
 %%%texts%%%
 
 \DeclareAcronym{col}{
-  short = Col ,
+  short = Col. ,
   long  = {Colossians, New Testament} ,
   % cite =  bergsma2019 ,
+  class = texts
+}
+
+\DeclareAcronym{rom}{
+  short = Rom. ,
+  long  = {Romans, New Testament} ,
   class = texts
 }
 
