--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -6,12 +6,32 @@
   year={1994}
 }
 
+@incollection{vanriemsdijk2006,
+  series = {2},
+  title = {Free Relatives},
+  booktitle = {The {{Blackwell Companion}} to Syntax},
+  publisher = {{Oxford: Blackwell Publishing}},
+  author = {Van Riemsdijk, Henk},
+  editor = {Everaert, Martin and {van Riemsdijk}, Henk},
+  year = {2006},
+  pages = {338-382},
+  doi = {10.1002/9780470996591.ch27}
+}
+
 @book{nikolaeva1999,
   title = {Ostyak},
   address = {München},
   publisher = {Lincom Europa},
   author = {Nikolaeva, Irina},
   year = {1999}
+}
+
+@phdthesis{himmelreich2017,
+  address = {Leipzig},
+  title = {Case Matching Effects in Free Relatives and Parasitic Gaps: {{A}} Study on the Properties of Agree},
+  school = {Universität Leipzig},
+  author = {Himmelreich, Anke},
+  year = {2017}
 }
 
 @incollection{pittner1996,
