--- a/introduction.tex
+++ b/introduction.tex
@@ -2,40 +2,74 @@
 
 \chapter{Introduction}
 
---general intro--
+This dissertation is about case competition, a situation in which two cases are assigned but only one of them surfaces. One of the constructions in which case competition appears is relative clauses that lack a head noun, i.e. headless relatives.
 
-Languages can use case to mark the grammatical role of a noun phrase in a clause. Consider the two Modern German sentences in \ref{ex:germancase}. In \ref{ex:germancase1}, \tit{der Lehrer} `the teacher' is marked nominative, and it is the subject. \tit{Den Schüler} `the student' is marked accusative, and it is an object. In \ref{ex:germancase2}, the roles are reversed: \tit{der Schüler} `the student' is marked nominative and it is the subject, and \tit{den Lehrer} `the teacher' is marked accusative and it is the object. Notice also that the subject precedes the predicate \tit{mag} `likes' and the object follows it.
+I show that one aspect about case competition in headless relatives holds for all languages (under discussion here at least). That is, there is a fixed order which decides which case wins the competition. Another aspect of case competition in headless relatives differs per language. That is, whether the competition takes place to begin with. I connect this variable to the morphology of the language in question.
+
+This phenomenon has been described as some special property of a few special languages. Therefore, language-specific rules have been postulated to account for the data. My goal is to show that this phenomenon can be captured with `normal' syntactic processes, like ellipsis, c-command. The account makes predictions about how a language behaves based on the shape of its relative pronouns. And we see that the phenomenon is actually more wide-spread than what has been assumed.
+%%this is too difficult
+
+In this introduction I first introduce what I mean exactly with case competition in headless relatives. Then I introduce the topics I discuss in this dissertation.
+
+
+\section{The title}
+
+First, case marks the grammatical role of the noun phrases. Case also appears on relative pronoun. Case on head noun can differ from case on relative pronoun. What happens if there is no noun? Two cases come together on the relative pronoun. What holds for all languages: there is a fixed order of who wins the competition. Specific from language to language: when does the competition take place?
+
+Languages can use case to mark the grammatical role of a noun phrase in a clause. Consider the two Modern German sentences in \ref{ex:germancase}. The case marking of the noun phrases is reflected on the determiner in the noun phrase.
+In \ref{ex:germancase1}, \tit{der} in \tit{der Lehrer} `the teacher' is marked as nominative, and it is the subject of \tit{mag} `likes'. \tit{Den} in \tit{den Schüler} `the student' is marked as accusative, and it is an object of \tit{mag} `likes'.
+In \ref{ex:germancase2}, the roles are reversed: \tit{der} in \tit{der Schüler} `the student' is marked as nominative and it is the subject of \tit{mag} `likes'. \tit{Den} in \tit{den Lehrer} `the teacher' is marked as accusative and it is the object of \tit{mag} `likes'.
+The grammatical roles of the noun phrases in \ref{ex:germancase} can also be derived from the positioning in the clause. The subjects precede the predicate \tit{mag} `likes' and the objects follow it. As it is not relevant for the discussion here, I ignore the positioning of noun phrases in the clause from now on.
 
 \ex.\label{ex:germancase}
 \ag. Der Lehrer mag den Schüler.\\
- the.\tsc{m.nom} teacher likes the.\tsc{m.acc} student\\
+ the.\tsc{nom} teacher likes the.\tsc{acc} student\\
  `The teacher likes the student.'\label{ex:germancase1}
 \bg. Der Schüler mag den Lehrer.\\
- the.\tsc{m.nom} student likes the.\tsc{m.acc}\\
+ the.\tsc{nom} student likes the.\tsc{acc}\\
  `The student likes the teacher.'\label{ex:germancase2}
 
-Not only full noun phrases, but also other elements can be marked for case, such relative pronouns. Modern German marks relative pronouns, just like full noun phrases, for the grammatical role they have in the clause. Consider the two sentences in \ref{ex:germanrelatives}. In \ref{ex:germanrelative1}, the relative pronoun \tit{der} `that.\tsc{m.nom}' introduces a clause that modifies \tit{den Schüler} `the student'. \tit{Der} `that.\tsc{m.nom}' is marked masculine and nominative. The relative pronoun is marked masculine, because it agrees in gender with its antecedent \tit{den Schüler} `the student'. It is marked nominative, because of its grammatical role: it is the subject in the relative clause.
-In \ref{ex:germanrelative2}, the relative pronoun \tit{den} `that.\tsc{m.acc}' is marked masculine and accusative. Again, the relative pronoun is marked masculine, because it agrees in gender with its antecedent \tit{den Schüler} `the student'. It is marked accusative, because of its grammatical role: it is the object in the relative clause.
+Not only full noun phrases, but also other elements can be marked for case, such relative pronouns. Modern German marks relative pronouns, just like full noun phrases, for the grammatical role they have in the clause. Consider the two sentences in \ref{ex:germanrelatives}. These two sentences both consist of a main clause that is modified by a relative clause, which is placed between brackets.
+In \ref{ex:germanrelative1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the student'. \tit{Den Schüler} `the student` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the student` is marked as accusative, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{der} `that.\tsc{nom}' is marked as nominative, because it is the subject of \tit{guckt} `looks' in the relative clause. So, the case of the head noun \tit{den Schüler} `the student' differs from the case of the relative pronoun \tit{der} `that.\tsc{nom}', because they each have their own grammatical function in their clauses.
+
+In \ref{ex:germanrelative2},  the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the student'. \tit{Den} in \tit{den Schüler} `the student` is again marked as accusative, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{den} `that.\tsc{acc}' is marked as accusative, because it is the object of \tit{sucht} `searches' in the relative clause. Here both the head noun \tit{den Schüler} `the student` and the relative pronoun \tit{der} `that.\tsc{acc}' are both marked for accusative, because of their grammatical roles in their respective clauses.
 
 \ex.\label{ex:germanrelatives}
-\ag. Der Lehrer mag den Schüler, der nach draußen guckt.\\
- the.\tsc{m.nom} teacher likes the.\tsc{m.acc} student that.\tsc{m.nom} to outside looks\\
+\ag. Der Lehrer mag den Schüler, [der nach draußen guckt].\\
+ the.\tsc{nom} teacher likes the.\tsc{acc} student that.\tsc{nom} to outside looks\\
  `The teacher likes the student that is looking outside.'\label{ex:germanrelative1}
- \bg. Der Lehrer mag den Schüler, den er beim Verstecktspiel sucht.\\
- the.\tsc{m.nom} teacher likes the.\tsc{m.acc} student that.\tsc{m.acc} he {at the} {hide-and-seek game} seeks\\
- `The teacher likes the student that he is looking for playing hide-and-seek.'\label{ex:germanrelative2}
+ \bg. Der Lehrer mag den Schüler, [den er beim Verstecktspiel sucht].\\
+ the.\tsc{nom} teacher likes the.\tsc{acc} student that.\tsc{acc} he {at the} {hide-and-seek game} searches\\
+ `The teacher likes the student that he is searching for playing hide-and-seek.'\label{ex:germanrelative2}
 
-%%work out after this
-If there is no head, we have a headless relative
-in these, there is only one place for the case.
+The construction under investigation in this dissertation is a headless relative, i.e. a relative clause that does not have a head noun. As the name suggests, this type of relative clause lacks a head noun.\footnote{
+This `missing noun' has been interpreted in two different ways. Some researchers argue that the noun is actually absent, cf. \citealt{vanriemsdijk2006}. Others claim that there is actually a head noun, but it is phonologically zero, \citealt{himmelreich2017}. At this point in the discussion it is irrelevant which of the two is correct. I return to this issue in Chapter \ref{ch:connecting}.
+}
+Consider the Gothic example of a headless relative in \ref{ex:gothicaccacc}.
+The relative clause \tit{þan -ei arma} `who I pity' is placed between brackets. The relative pronoun is the object of \tit{arma} `pity', and it is marked as accusative. There is no head noun in the main clause for the relative pronoun to modify.
 
---give example of a matching one--
+\exg. gaarma [þan -ei arma]\\
+ pity\scsub{[acc]} who.\ac{acc} -\tsc{comp} pity\scsub{[acc]}\\
+ `I will pity him whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccacc}
+
+What happens with the case that is assigned by the predicate in the main clause, \tit{gaarma} `pity'? Unlike in the headed relatives, there is only a single element that can carry case. We cannot say anything about that, because \tit{gaarma} `pity' also assigns accusative. We cannot see whether the accusative comes from within the relative clause, from outside of the clause, or if its both.
 
 then the cases can differ
 then, there is a case conflict
 
 there we have case competition in headless relatives
 this thesis discusses different aspects of this phenomenon
+
+\exg. [þan -ei frijos] siuks ist\\
+ who.\ac{acc} -\tsc{comp} love\scsub{[acc]} sick is\scsub{[nom]}\\
+ `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, after \pgcitealt{harbert1978}{342}}
+
+\exg. jah [þo -ei ist us Laudeikaion] jus ussiggwaid\\
+ and what.\ac{acc} -\tsc{comp} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
+ `and read that which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, after \pgcitealt{harbert1978}{357}}
+
+
+\section{Three parts}
 
 first, what holds for all languages is that there is a single order: highest in the hierarchy wins
 in the first part, I..
