--- a/morphology-syntax.tex
+++ b/morphology-syntax.tex
@@ -1,6 +1,6 @@
 % !TEX root = thesis.tex
 
-\chapter{Connecting morphology and syntax}
+\chapter{Connecting morphology and syntax}\label{ch:connecting}
 
 
 \section{Background: relative clause theory}
