--- a/variation.tex
+++ b/variation.tex
@@ -291,6 +291,7 @@ So, to sum up:
 
 \tsc{d}, \tsc{d}
 
+Wouldn't we now not expect that Modern German patterns with Old High German wrt attraction in headed constructions. Yes, we would. And yes, this is exactly what we see. Paper by Bader on case attraction.
 
 
 
