intro storyline there
nu nog de tekst.. jaja

--- a/introduction.tex
+++ b/introduction.tex
@@ -17,56 +17,62 @@ In this introduction I first introduce what I mean exactly with case competition
 First, case marks the grammatical role of the noun phrases. Case also appears on relative pronoun. Case on head noun can differ from case on relative pronoun. What happens if there is no noun? Two cases come together on the relative pronoun. What holds for all languages: there is a fixed order of who wins the competition. Specific from language to language: when does the competition take place?
 
 Languages can use case to mark the grammatical role of a noun phrase in a clause. Consider the two Modern German sentences in \ref{ex:germancase}. The case marking of the noun phrases is reflected on the determiner in the noun phrase.
-In \ref{ex:germancase1}, \tit{der} in \tit{der Lehrer} `the teacher' is marked as nominative, and it is the subject of \tit{mag} `likes'. \tit{Den} in \tit{den Schüler} `the student' is marked as accusative, and it is an object of \tit{mag} `likes'.
-In \ref{ex:germancase2}, the roles are reversed: \tit{der} in \tit{der Schüler} `the student' is marked as nominative and it is the subject of \tit{mag} `likes'. \tit{Den} in \tit{den Lehrer} `the teacher' is marked as accusative and it is the object of \tit{mag} `likes'.
-The grammatical roles of the noun phrases in \ref{ex:germancase} can also be derived from the positioning in the clause. The subjects precede the predicate \tit{mag} `likes' and the objects follow it. As it is not relevant for the discussion here, I ignore the positioning of noun phrases in the clause from now on.
+In \ref{ex:germancase1}, \tit{der} in \tit{der Lehrer} `the teacher' is assigned nominative case, because it is the subject of \tit{mag} `likes'. \tit{Den} in \tit{den Schüler} `the pupil' is assigned accusative case, because it is an object of \tit{mag} `likes'.
+In \ref{ex:germancase2}, the roles are reversed: \tit{der} in \tit{der Schüler} `the pupil' is assigned nominative case, because it is the subject of \tit{mag} `likes'. \tit{Den} in \tit{den Lehrer} `the teacher' is assigned accusative case, because it is the object of \tit{mag} `likes'.
+The grammatical roles of the noun phrases in \ref{ex:germancase} can also be derived from the positioning in the clause. The subjects precede the predicate \tit{mag} `likes' and the objects follow it. As it is not relevant for the discussion here, I do not discuss the positioning of noun phrases in the clause into further detail.
 
 \ex.\label{ex:germancase}
 \ag. Der Lehrer mag den Schüler.\\
  the.\tsc{nom} teacher likes the.\tsc{acc} student\\
- `The teacher likes the student.'\label{ex:germancase1}
+ `The teacher likes the pupil.'\label{ex:germancase1}
 \bg. Der Schüler mag den Lehrer.\\
  the.\tsc{nom} student likes the.\tsc{acc}\\
- `The student likes the teacher.'\label{ex:germancase2}
+ `the pupil likes the teacher.'\label{ex:germancase2}
 
 Not only full noun phrases, but also other elements can be marked for case, such relative pronouns. Modern German marks relative pronouns, just like full noun phrases, for the grammatical role they have in the clause. Consider the two sentences in \ref{ex:germanrelatives}. These two sentences both consist of a main clause that is modified by a relative clause, which is placed between brackets.
-In \ref{ex:germanrelative1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the student'. \tit{Den Schüler} `the student` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the student` is marked as accusative, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{der} `that.\tsc{nom}' is marked as nominative, because it is the subject of \tit{guckt} `looks' in the relative clause. So, the case of the head noun \tit{den Schüler} `the student' differs from the case of the relative pronoun \tit{der} `that.\tsc{nom}', because they each have their own grammatical function in their clauses.
+In \ref{ex:germanrelative1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Den Schüler} `the pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` is assigned accusative case, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{der} `that.\tsc{nom}' is assigned nominative case, because it is the subject of \tit{guckt} `looks' in the relative clause.
 
-In \ref{ex:germanrelative2},  the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the student'. \tit{Den} in \tit{den Schüler} `the student` is again marked as accusative, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{den} `that.\tsc{acc}' is marked as accusative, because it is the object of \tit{sucht} `searches' in the relative clause. Here both the head noun \tit{den Schüler} `the student` and the relative pronoun \tit{der} `that.\tsc{acc}' are both marked for accusative, because of their grammatical roles in their respective clauses.
+In \ref{ex:germanrelative2},  the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the pupil'. \tit{Den} in \tit{den Schüler} `the pupil` is again marked as accusative, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{den} `that.\tsc{acc}' is assigned accusative case, because it is the object of \tit{sucht} `searches' in the relative clause.
 
 \ex.\label{ex:germanrelatives}
 \ag. Der Lehrer mag den Schüler, [der nach draußen guckt].\\
  the.\tsc{nom} teacher likes the.\tsc{acc} student that.\tsc{nom} to outside looks\\
- `The teacher likes the student that is looking outside.'\label{ex:germanrelative1}
+ `The teacher likes the pupil that is looking outside.'\label{ex:germanrelative1}
  \bg. Der Lehrer mag den Schüler, [den er beim Verstecktspiel sucht].\\
  the.\tsc{nom} teacher likes the.\tsc{acc} student that.\tsc{acc} he {at the} {hide-and-seek game} searches\\
- `The teacher likes the student that he is searching for playing hide-and-seek.'\label{ex:germanrelative2}
+ `The teacher likes the pupil that he is searching for playing hide-and-seek.'\label{ex:germanrelative2}
+
+Notice something about the two sentences above.
+So, the case of the head noun \tit{den Schüler} `the pupil' differs from the case of the relative pronoun \tit{der} `that.\tsc{nom}', because they each have their own grammatical function in their clauses. Here both the head noun \tit{den Schüler} `the pupil` and the relative pronoun \tit{der} `that.\tsc{acc}' are both marked for accusative, because of their grammatical roles in their respective clauses.
 
 The construction under investigation in this dissertation is a headless relative, i.e. a relative clause that does not have a head noun. As the name suggests, this type of relative clause lacks a head noun.\footnote{
 This `missing noun' has been interpreted in two different ways. Some researchers argue that the noun is actually absent, cf. \citealt{vanriemsdijk2006}. Others claim that there is actually a head noun, but it is phonologically zero, \citealt{himmelreich2017}. At this point in the discussion it is irrelevant which of the two is correct. I return to this issue in Chapter \ref{ch:connecting}.
 }
-Consider the Gothic example of a headless relative in \ref{ex:gothicaccacc}.
-The relative clause \tit{þan -ei arma} `who I pity' is placed between brackets. The relative pronoun is the object of \tit{arma} `pity', and it is marked as accusative. There is no head noun in the main clause for the relative pronoun to modify.
+Consider the Gothic example of a headless relative in \ref{ex:gothicaccacc}. The subscripts between [] indicate the case verbs require on the headles relative pronoun.
+The relative clause \tit{þan -ei arma} `who I pity' is placed between brackets. There is no head for this relative clause. The relative pronoun \tit{þan(a)} `who.\ac{acc}' is assigned accusative case.\footnote{
+The relative pronoun without complementizer \tit{-ei} is þana, so I write \tit{(a)} behind \tit{þan} in the text.
+}
+Where did the relative pronoun get its case from? From the predicate in the embedded clause, just as in the headed relatives? And what about the predicate in the main clause, what does this do with its case? In the headed example there was the head that carried received the case, but now there is only a single location. The example here does not help us any further, because both predicates assign accusative.
 
 \exg. gaarma [þan -ei arma]\\
  pity\scsub{[acc]} who.\ac{acc} -\tsc{comp} pity\scsub{[acc]}\\
  `I will pity him whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccacc}
 
-What happens with the case that is assigned by the predicate in the main clause, \tit{gaarma} `pity'? Unlike in the headed relatives, there is only a single element that can carry case. We cannot say anything about that, because \tit{gaarma} `pity' also assigns accusative. We cannot see whether the accusative comes from within the relative clause, from outside of the clause, or if its both.
+We need an example in which the predicates assign different cases. first, let's see what happens if we put a dative in the relative clause. main remains accusative. ha! relative pronoun becomes dative. accusative is wrong here.. only because of absence of data.
 
-then the cases can differ
-then, there is a case conflict
+\exg. ushafjands [ana þamm -ei lag]\\
+ {picking up}\scsub{[acc]} on\scsub{[dat]} what.\ac{dat} -\tsc{comp} lay\\
+ `picking up that on which he lay' \flushfill{Gothic, \ac{luke} 5:25, after \pgcitealt{harbert1978}{343}}
 
-there we have case competition in headless relatives
-this thesis discusses different aspects of this phenomenon
+ok, dan hupsa dative there. seems that main clause also plays a role! whuuuut!
 
-\exg. [þan -ei frijos] siuks ist\\
- who.\ac{acc} -\tsc{comp} love\scsub{[acc]} sick is\scsub{[nom]}\\
- `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, after \pgcitealt{harbert1978}{342}}
+\exg. hva nu wileiþ ei taujau [þamm -ei qiþiþ þiudan Iudaie]?\\
+ what now want that do\scsub{[dat]} who.\ac{dat} -\tsc{comp} say\scsub{[acc]} king {of Jews}\\
+ `what now do you wish that I do to him whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, after \pgcitealt{harbert1978}{339}}
 
-\exg. jah [þo -ei ist us Laudeikaion] jus ussiggwaid\\
- and what.\ac{acc} -\tsc{comp} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
- `and read that which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, after \pgcitealt{harbert1978}{357}}
+conclusion: there is case competition in these examples. and we saw: between accusative and dative, dative always wins.
+
+
 
 
 \section{Three parts}
