--- a/reoccuring-pattern.tex
+++ b/reoccuring-pattern.tex
@@ -36,7 +36,7 @@
 
 \ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{acc}, is with a preposition
 \ag. ushafjands [ana þamm -ei lag]\\
- {picking up}\scsub{[acc]}\scsub{[dat]} on what.\ac{dat} -\tsc{comp} lay\\
+ {picking up}\scsub{[acc]} on\scsub{[dat]} what.\ac{dat} -\tsc{comp} lay\\
  `picking up that on which he lay' \flushfill{Gothic, \ac{luke} 5:25, after \pgcitealt{harbert1978}{343}}
 \b. \ac{acc} not attested
 
