--- a/introduction.tex
+++ b/introduction.tex
@@ -2,7 +2,7 @@
 
 \chapter{Introduction}
 
-This dissertation is about case competition, a situation in which two cases are assigned but only one of them surfaces. One of the constructions in which case competition appears is relative clauses that lack a head noun, i.e. headless relatives.
+This dissertation is about case competition, a situation in which two cases are assigned but only one of them surfaces. One of the constructions in which case competition appears is relative clauses that lack a head, i.e. headless relatives.
 
 I show that one aspect about case competition in headless relatives holds for all languages (under discussion here at least). That is, there is a fixed order which decides which case wins the competition. Another aspect of case competition in headless relatives differs per language. That is, whether the competition takes place to begin with. I connect this variable to the morphology of the language in question.
 
@@ -12,13 +12,13 @@ This phenomenon has been described as some special property of a few special lan
 In this introduction I first introduce what I mean exactly with case competition in headless relatives. Then I introduce the topics I discuss in this dissertation.
 
 
-\section{The title}
+\section{Case assignment}
 
-First, case marks the grammatical role of the noun phrases. Case also appears on relative pronoun. Case on head noun can differ from case on relative pronoun. What happens if there is no noun? Two cases come together on the relative pronoun. What holds for all languages: there is a fixed order of who wins the competition. Specific from language to language: when does the competition take place?
+First, case marks the grammatical role of the noun phrases. Case also appears on relative pronoun. Case on head can differ from case on relative pronoun. What happens if there is no noun? Two cases come together on the relative pronoun. What holds for all languages: there is a fixed order of who wins the competition. Specific from language to language: when does the competition take place?
 
 Languages can use case to mark the grammatical role of a noun phrase in a clause. Consider the two Modern German sentences in \ref{ex:germancase}. The case marking of the noun phrases is reflected on the determiner in the noun phrase.
-In \ref{ex:germancase1}, \tit{der} in \tit{der Lehrer} `the teacher' is assigned nominative case, because it is the subject of \tit{mag} `likes'. \tit{Den} in \tit{den Schüler} `the pupil' is assigned accusative case, because it is an object of \tit{mag} `likes'.
-In \ref{ex:germancase2}, the roles are reversed: \tit{der} in \tit{der Schüler} `the pupil' is assigned nominative case, because it is the subject of \tit{mag} `likes'. \tit{Den} in \tit{den Lehrer} `the teacher' is assigned accusative case, because it is the object of \tit{mag} `likes'.
+In \ref{ex:germancase1}, \tit{der} in \tit{der Lehrer} `the teacher' is assigned nominative case, because it is the subject in the clause. \tit{Den} in \tit{den Schüler} `the pupil' is assigned accusative case, because it is an object of \tit{mag} `likes'.
+In \ref{ex:germancase2}, the roles are reversed: \tit{der} in \tit{der Schüler} `the pupil' is assigned nominative case, because it is the subject in the clause. \tit{Den} in \tit{den Lehrer} `the teacher' is assigned accusative case, because it is the object of \tit{mag} `likes'.
 The grammatical roles of the noun phrases in \ref{ex:germancase} can also be derived from the positioning in the clause. The subjects precede the predicate \tit{mag} `likes' and the objects follow it. As it is not relevant for the discussion here, I do not discuss the positioning of noun phrases in the clause into further detail.
 
 \ex.\label{ex:germancase}
@@ -30,9 +30,9 @@ The grammatical roles of the noun phrases in \ref{ex:germancase} can also be der
  `the pupil likes the teacher.'\label{ex:germancase2}
 
 Not only full noun phrases, but also other elements can be marked for case, such relative pronouns. Modern German marks relative pronouns, just like full noun phrases, for the grammatical role they have in the clause. Consider the two sentences in \ref{ex:germanrelatives}. These two sentences both consist of a main clause that is modified by a relative clause, which is placed between brackets.
-In \ref{ex:germanrelative1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Den Schüler} `the pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` is assigned accusative case, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{der} `that.\tsc{nom}' is assigned nominative case, because it is the subject of \tit{guckt} `looks' in the relative clause.
+In \ref{ex:germanrelative1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Den Schüler} `the pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` is assigned accusative case, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{der} `that.\tsc{nom}' is assigned nominative case, because it is the subject of in the relative clause.
 
-In \ref{ex:germanrelative2},  the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the pupil'. \tit{Den} in \tit{den Schüler} `the pupil` is again marked as accusative, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{den} `that.\tsc{acc}' is assigned accusative case, because it is the object of \tit{sucht} `searches' in the relative clause.
+In \ref{ex:germanrelative2}, the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the pupil'. \tit{Den} in \tit{den Schüler} `the pupil` is again marked as accusative, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{den} `that.\tsc{acc}' is assigned accusative case, because it is the object of \tit{sucht} `searches' in the relative clause.
 
 \ex.\label{ex:germanrelatives}
 \ag. Der Lehrer mag den Schüler, [der nach draußen guckt].\\
@@ -42,41 +42,48 @@ In \ref{ex:germanrelative2},  the relative clause \tit{den er beim Verstecktspie
  the.\tsc{nom} teacher likes the.\tsc{acc} student that.\tsc{acc} he {at the} {hide-and-seek game} searches\\
  `The teacher likes the pupil that he is searching for playing hide-and-seek.'\label{ex:germanrelative2}
 
-Notice something about the two sentences above.
-So, the case of the head noun \tit{den Schüler} `the pupil' differs from the case of the relative pronoun \tit{der} `that.\tsc{nom}', because they each have their own grammatical function in their clauses. Here both the head noun \tit{den Schüler} `the pupil` and the relative pronoun \tit{der} `that.\tsc{acc}' are both marked for accusative, because of their grammatical roles in their respective clauses.
+Compare the two sentences in \ref{ex:germanrelatives}. In both sentences the head is marked accusative because it is the object in the main clause. The case of the relative pronoun in \ref{ex:germanrelative2} is also accusative, because of it is the object in the relative clause. The case of the relative pronoun in \ref{ex:germanrelative1} differs from the case of the head, it is nominative.
 
-The construction under investigation in this dissertation is a headless relative, i.e. a relative clause that does not have a head noun. As the name suggests, this type of relative clause lacks a head noun.\footnote{
-This `missing noun' has been interpreted in two different ways. Some researchers argue that the noun is actually absent, cf. \citealt{vanriemsdijk2006}. Others claim that there is actually a head noun, but it is phonologically zero, \citealt{himmelreich2017}. At this point in the discussion it is irrelevant which of the two is correct. I return to this issue in Chapter \ref{ch:connecting}.
+
+\section{Headless relatives}
+
+The focus of this dissertation lies on the headless relative, i.e. a relative clause that does not have a head. As the name suggests, this type of relative clause lacks a head.\footnote{
+This `missing noun' has been interpreted in two different ways. Some researchers argue that the noun is truly missing, it is absent, cf. \citealt{vanriemsdijk2006}. Others claim that there is actually a head, but it is phonologically zero, \citealt{himmelreich2017}. At this point in the discussion this distinction is not relevant. I return to the issue in Chapter \ref{ch:connecting}.
 }
-Consider the Gothic example of a headless relative in \ref{ex:gothicaccacc}. The subscripts between [] indicate the case verbs require on the headles relative pronoun.
-The relative clause \tit{þan -ei arma} `who I pity' is placed between brackets. There is no head for this relative clause. The relative pronoun \tit{þan(a)} `who.\ac{acc}' is assigned accusative case.\footnote{
-The relative pronoun without complementizer \tit{-ei} is þana, so I write \tit{(a)} behind \tit{þan} in the text.
+Consider the Gothic example of a headless relative in \ref{ex:gothicaccacc}. I placed subscripts between the square brackets on the glosses of verbs. They indicate which case the verbs assign to their object.
+In \ref{ex:gothicaccacc}, the relative clause \tit{þan -ei arma} `who I pity' is placed between square brackets. There is no head that this relative clause modifies, it is a headless relative. This is different from the examples from German I gave above, which each had a head.
+The relative pronoun \tit{þan(a)} `who.\ac{acc}' is assigned accusative case.\footnote{
+The relative pronoun without the complementizer \tit{-ei} is \tit{þana}. Therefore, I refer to the relative pronoun as \tit{þan(a)}.
 }
-Where did the relative pronoun get its case from? From the predicate in the embedded clause, just as in the headed relatives? And what about the predicate in the main clause, what does this do with its case? In the headed example there was the head that carried received the case, but now there is only a single location. The example here does not help us any further, because both predicates assign accusative.
 
 \exg. gaarma [þan -ei arma]\\
  pity\scsub{[acc]} who.\ac{acc} -\tsc{comp} pity\scsub{[acc]}\\
  `I will pity him whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccacc}
 
-We need an example in which the predicates assign different cases. first, let's see what happens if we put a dative in the relative clause. main remains accusative. ha! relative pronoun becomes dative. accusative is wrong here.. only because of absence of data.
+Where does this accusative case assignment come from? Logically speaking, there are two candidates: the predicate in the main clause \tit{gaarma} `pity' and the predicate in the relative clause \tit{arma} `pity'. Did the predicate in the relative clause \tit{arma} `pity' assign accusative case? In the headed relative clauses in \ref{ex:germanrelatives}, the relative pronoun received its case from the predicate in the relative clause. The crucial difference with that type of relative clause is that there is a head for the main clause to assign its case to. Did the predicate in the main clause \tit{gaarma} `pity' assign accusative case? I will argue that both of them did. Actually, \ref{ex:gothicaccacc} is the first example I gave of case competition in a headless relative. It is an uninteresting one, because the two competing cases are identical.
+
+In the remainder of this section I show evidence for the claim that relative pronouns in headless relatives take the case of the predicate in the relative clause and the predicate in the main clause. This evidence comes from headless relatives in which the predicate in the relative clause takes a different case from the predicate in the main clause.
+
+Consider the example in \ref{ex:gothicaccdat}. The relative clause is \tit{ana þamm -ei lag} `on what he lay'.
+- here the subscript are on the preposition, because the preposition selects for a case
+- on selects for dative, which is in the relative clause
+- picking up selects for accusative which is in the relative clause
+- we see this dative on the relative pronoun, and this can only come from the relative clause predicate
 
 \exg. ushafjands [ana þamm -ei lag]\\
  {picking up}\scsub{[acc]} on\scsub{[dat]} what.\ac{dat} -\tsc{comp} lay\\
- `picking up that on which he lay' \flushfill{Gothic, \ac{luke} 5:25, after \pgcitealt{harbert1978}{343}}
+ `picking up that on which he lay' \flushfill{Gothic, \ac{luke} 5:25, after \pgcitealt{harbert1978}{343}}\label{ex:gothicaccdat}
 
-ok, dan hupsa dative there. seems that main clause also plays a role! whuuuut!
+-realtive: say selects for accusative
+-main: do selects dative
+- we see the dative again, and this can only come from the main clause
 
 \exg. hva nu wileiþ ei taujau [þamm -ei qiþiþ þiudan Iudaie]?\\
  what now want that do\scsub{[dat]} who.\ac{dat} -\tsc{comp} say\scsub{[acc]} king {of Jews}\\
  `what now do you wish that I do to him whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, after \pgcitealt{harbert1978}{339}}
 
-conclusion: there is case competition in these examples. and we saw: between accusative and dative, dative always wins.
 
-
-
-
-\section{Three parts}
-
+1=case competition, there is a heirarchy. cite people
 first, what holds for all languages is that there is a single order: highest in the hierarchy wins
 in the first part, I..
 
