discussie met melly gehad
en intro schrijven

--- a/morphology-syntax.tex
+++ b/morphology-syntax.tex
@@ -12,6 +12,24 @@ Standard raising, probably Cinque's double-headed structures
 In \ac{ohg}, proper attraction in headless relatives can be derived from headed relatives. The relative pronoun is the determiner from the main clause. Under a double-headed Cinque-analysis, it is the internal DP that is deleted.
 
 
+\ex. \tsc{dat} instead of \tsc{?}
+\ag. was allon them ando, them thar quamun at erist tuo\\
+ what all d.\tsc{dat} {do to} d.\tsc{dat} there x as first do?\\
+ `'
+
+
+
+than is im so them salte them (the M) man bi seuues Stade
+oido teuuirpit, 1370.
+
+Hon them erlscipie them thar inne uuas, 2768.
+
+allon them ando them thar quamun at erist tuo, 3435. 
+
+fon them herrosten them thes hnses giuueld, 3344 C.
+
+sagda them alat them (the M) thar all giscaop, 4636. —
+
 
 
 \ex. \ac{acc} instead of \ac{nom}
