--- a/reoccuring-pattern.tex
+++ b/reoccuring-pattern.tex
@@ -170,24 +170,6 @@ cognates across Slavic - Serbian
 
 
 
-\subsubsection{ABC}
-
-\begin{table}[H]
-  \center
-	\caption {ABC patterns in suppletion}
-		\begin{tabular}{ccc}
-		\toprule
-              & Khinalugh          \\
-		            \cmidrule(lr){2-2}
-              & \ac{1}\ac{sg}      \\
-		            \cmidrule(lr){2-2}
-    \ac{nom}  & zɨ                  \\
-    \ac{acc}  & jä                  \\
-    \ac{dat}  & as(ɨr)              \\
-    \bottomrule
-		\end{tabular}
-\end{table}
-
 
 
 \subsubsection{AAB}
@@ -210,16 +192,95 @@ cognates across Slavic - Serbian
 \end{table}
 
 
+\subsubsection{ABC}
+
+\begin{table}[H]
+  \center
+	\caption {ABC patterns in suppletion}
+		\begin{tabular}{ccc}
+		\toprule
+              & Khinalugh          \\
+		            \cmidrule(lr){2-2}
+              & \ac{1}\ac{sg}      \\
+		            \cmidrule(lr){2-2}
+    \ac{nom}  & zɨ                  \\
+    \ac{acc}  & jä                  \\
+    \ac{dat}  & as(ɨr)              \\
+    \bottomrule
+		\end{tabular}
+\end{table}
+
+
+
 
 
 
 \subsection{Syncretism patterns}
 
 \subsubsection{ABB}
-\subsubsection{ABC}
+
+Van Baal, Don
+
+\begin{table}[H]
+  \center
+	\caption {ABB patterns in suppletion}
+		\begin{tabular}{cccccc}
+		\toprule
+              & Dutch           &                      & \multicolumn{3}{c}{x}                                           \\
+		            \cmidrule(lr){2-2}    \cmidrule(lr){3-3}    \cmidrule(lr){4-6}
+              & \ac{1}\ac{sg}   & \ac{2}\ac{sg}        & \ac{sg}.\ac{f}  & \ac{3}\ac{sg}.\ac{m}  & \ac{3}\ac{sg}.\ac{n}  \\
+		            \cmidrule(lr){2-2}    \cmidrule(lr){3-3}    \cmidrule(lr){4-6}
+    \ac{nom}  & ik              & jij                  &  ona                  & oni                   & on                    \\
+    \ac{acc}  & \tbf{mij}       & \tbf{jou}            & \tbf{nj}u             & \tbf{nji}h            & \tbf{nje}-ga          \\
+    \ac{dat}  & \tbf{mij}       & \tbf{jou}            & \tbf{nj}oj            & \tbf{nji}ma           & \tbf{nje}-mu          \\
+    \bottomrule
+		\end{tabular}
+\end{table}
+
+
+https://linguistlist.org/issues/13/13-1129.html
+
+
 \subsubsection{AAB}
 
+Russian: table pl,
+stol-y
+stol-y
+stol-ov
 
+
+Russian, building sg,
+zdani-e
+zdani-e
+zdani-ju
+
+
+
+
+endings of Latin nouns.9
+n(n) n(mf) I(fm) V(fm) ffl(n) ffl(mf) nii(mf) mi(n) IV(mf) IV(n)
+sg. -um -us -a -es 0,-s -is,-es -c -us -u(-u?)
+Ac -um -um -am -em -em -em -e -um -u(-u?)
+-I -~i -ai>-ae 4l -is -is -is -is -Qs -us
+-6 -6 -ae -el -I -1 -I -1 -ul *u
+Ab -6 -6 -a -S -e -c -e, -i -I -Q -u
+pl. -a -I -ae -es -a -es -cs -ia -us -ua
+Ac -a -6s -as -es -a  -es, -Is -ia -us -ua
+-orum -omm -arum -erum -um -um -ium -ium -uum -uum
+DAb -is -Ts -Is -ebus -ibus -ibus -ibus -ibus -ibus -ibus
+
+
+
+
+german:
+die die der
+das das dem
+
+
+
+\subsubsection{ABC}
+
+all different endings
 
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}
@@ -227,7 +288,7 @@ cognates across Slavic - Serbian
 
 
 
-\section{Why the genitive is excluded}
+\section{A side note on the genitive}
 
 \begin{itemize}
   \item possessive
