--- a/variation.tex
+++ b/variation.tex
@@ -75,21 +75,21 @@ Don't know:
 \ag. gaat uz diu halt za dem iz forchaufent\\
  \\
  `' \flushfill{\ac{ohg}, Monsee Fragments 20,14, \citealt[761]{behaghel1923}}
-\bg. thisiu fon thiu, iru wan ist, siu alla iru libnara santa (ex eo, quod)\\
- \\
- `hæc autem ex eo quod deest illi, totum victum suum quem habuit misit.' \flushfill{\ac{ohg}, Tatian 118,1, \citealt[761]{behaghel1923}}
-\bg. thaz iru thiu sin guati nirzigi, thes siu bati\\
- \\
- `' \flushfill{\ac{ohg}, Otfrid II,8,24, \citealt[761]{behaghel1923}}
+% \bg. thisiu fon thiu, iru wan ist, siu alla iru libnara santa (ex eo, quod)\\
+%  \\
+%  `hæc autem ex eo quod deest illi, totum victum suum quem habuit misit.' \flushfill{\ac{ohg}, Tatian 118,1, \citealt[761]{behaghel1923}}
+% \bg. thaz iru thiu sin guati nirzigi, thes siu bati\\
+%  \\
+%  `' \flushfill{\ac{ohg}, Otfrid II,8,24, \citealt[761]{behaghel1923}}
 \bg. thia laz ih themo iz lisit thar\\
  \\
  `' \flushfill{\ac{ohg}, Otfrid I,19,25, \citealt[761]{behaghel1923}}
-\bg. noh so neduohti in gnuoge des si habetin\\
- \\
- `' \flushfill{\ac{ohg}, Notker I,63,29, \citealt[761]{behaghel1923}}
-\bg. tannoh pito ih tes noh fore ist (id quod)\\
- \\
- `' \flushfill{\ac{ohg}, Notker 193,19, \citealt[761]{behaghel1923}}
+% \bg. noh so neduohti in gnuoge des si habetin\\
+%  \\
+%  `' \flushfill{\ac{ohg}, Notker I,63,29, \citealt[761]{behaghel1923}}
+% \bg. tannoh pito ih tes noh fore ist (id quod)\\
+%  \\
+%  `' \flushfill{\ac{ohg}, Notker 193,19, \citealt[761]{behaghel1923}}
 
 So, to sum up:
 
@@ -221,10 +221,10 @@ So, to sum up:
 		\toprule
 							& rel pron in headless rel	& rel prons in light-headed rel		\\
 		\midrule
-		Gothic		& \tsc{d} +\tsc{comp}				&	\tsc{d} + \tsc{d} + \tsc{comp}	\\
-		\ac{ohg}	&	\tsc{d} 									&	\tsc{d} + \tsc{d} 							\\
-		\ac{mg}		& \tsc{wh} 									&	\tsc{d} + \tsc{d} 							\\
-		Italian		& \tsc{wh} 									&	\tsc{d} + \tsc{wh} 							\\
+		Gothic		& \tsc{a} +\tsc{c}					&	\tsc{a} + \tsc{a} + \tsc{c}			\\
+		\ac{ohg}	&	\tsc{a} 									&	\tsc{a} + \tsc{a} 							\\
+		\ac{mg}		& \tsc{b} 									&	\tsc{a} + \tsc{a} 							\\
+		Italian		& \tsc{b} 									&	\tsc{a} + \tsc{b} 							\\
 		\bottomrule
 	\end{tabular}
 \end{table}
@@ -343,10 +343,10 @@ Pattern in light-headed relatives: \tsc{d}, \tsc{d}
 		\toprule
 							&	rel pron in headless rel	& rel prons in light-headed rel		& \ac{int}>\ac{ext}		& \ac{ext}>\ac{int}	\\
 		\midrule
-		Gothic 		& \tsc{d} +\tsc{comp}				&	\tsc{d} + \tsc{d} + \tsc{comp}	& ✔										&	✔									\\
-		\ac{ohg}	& \tsc{d} 									&	\tsc{d} + \tsc{d} 							& *										&	✔									\\
-		\ac{mg}		&	\tsc{wh} 									&	\tsc{d} + \tsc{d} 							& ✔										&	*									\\
-		Italian		& \tsc{wh} 									&	\tsc{d} + \tsc{wh} 							& *										&	*									\\
+		Gothic 		& \tsc{a} +\tsc{c}					&	\tsc{a} + \tsc{a} + \tsc{c}			& ✔										&	✔									\\
+		\ac{ohg}	& \tsc{a} 									&	\tsc{a} + \tsc{a} 							& *										&	✔									\\
+		\ac{mg}		&	\tsc{b} 									&	\tsc{a} + \tsc{a} 							& ✔										&	*									\\
+		Italian		& \tsc{b} 									&	\tsc{a} + \tsc{b} 							& *										&	*									\\
 		\bottomrule
 	\end{tabular}
 \end{table}
