--- a/case-decomposition-meets-ellipsis.tex
+++ b/case-decomposition-meets-ellipsis.tex
@@ -2,9 +2,13 @@
 
 \chapter{Case decomposition meets ellipsis}
 
+The problem: so far people that account for headless relatives have made reference to this case hierachy. they put them in their OT tables, let the fly in from the left in their syntax, whatever. What I want to do is unify all the instances of nom-acc-dat. I put nom-acc-dat in syntax. which is morphology.
 
 
 \section{Case decomposition}
+
+
+
 
 Syntax = morphology
 
