op kantoor vrijdag
reoccuring pattern de tekst

--- a/case-decomposition-meets-ellipsis.tex
+++ b/case-decomposition-meets-ellipsis.tex
@@ -2,15 +2,18 @@
 
 \chapter{Case decomposition meets ellipsis}
 
-The problem: so far people that account for headless relatives have made reference to this case hierachy. they put them in their OT tables, let the fly in from the left in their syntax, whatever. What I want to do is unify all the instances of nom-acc-dat. I put nom-acc-dat in syntax. which is morphology.
 
-
-\section{Case decomposition}
-
+\section{Problem with previous analyses of headless relatives}
 
 
 
-Syntax = morphology
+The problem: so far people that account for headless relatives have made reference to this case hierachy. they put them in their OT tables, let the fly in from the left in their syntax, whatever.
+
+What I do is start is start from morphology. There we have complex case: dat - acc - nom.
+What we see in syntax is a by-product of the morphology, it´s a consequence, it´s an indirect relation. cause and effect
+if the morphology is different, than so will the syntax
+
+\section{Case decomposition in morphology}
 
 \ex.
 \begin{forest} boom
@@ -27,11 +30,6 @@ Syntax = morphology
 \end{forest}
 
 
-\section{Elipsis}
-
-Elipsis targets phrases
-
-
 
 
 \section{Phrasal spellout}
@@ -39,9 +37,23 @@ Elipsis targets phrases
 Single morphemes spell out phrases
 
 
+
+
+\section{Ellipsis}
+
+Ellipsis targets phrases
+
+
+
+\section{Relation between morphology and syntax}
+
+
+
+
+
 \section{The intuition}
 
-\subsection{Cases contain each other}
+\subsection{Morphology}
 
 \ex.
 \begin{forest} boom
@@ -133,7 +145,7 @@ Single morphemes spell out phrases
 
 
 
-\subsection{Cases elide each other}
+\subsection{Syntax}
 
 \begin{table}[H]
   \center
@@ -246,3 +258,11 @@ Single morphemes spell out phrases
       \end{forest}\\
   \end{tabular}
 \end{table}
+
+
+
+
+
+\section{Similar analyses}
+
+Himmelreich
