--- a/reoccuring-pattern.tex
+++ b/reoccuring-pattern.tex
@@ -2,7 +2,87 @@
 
 \chapter{A reoccurring pattern}
 
+Start with the main focus of this dissertation
+A phenomenon goes parallel with the ordering
+
+
 \section{Case competition in Gothic headless relatives}
+
+In the introduction I already showed accusative vs. dative, and dative always won. Here I additionaly add nomniative. I will show that ordering of strenght is nom-acc-dat.
+
+First some terminilogy.
+Intern
+Extern
+
+\begin{table}[H]
+  \center
+  \caption {Case attraction in headless relatives - empty}
+    \begin{tabular}{c|c|c|c}
+      \toprule
+        \diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
+            & [\ac{nom}]
+            & [\ac{acc}]
+            & [\ac{dat}]
+            \\ \cmidrule{1-4}
+        [\ac{nom}]
+            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+            \\ \cmidrule{1-4}
+        [\ac{acc}]
+            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+            \\ \cmidrule{1-4}
+        [\ac{dat}]
+            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+            \\
+      \bottomrule
+    \end{tabular}
+\end{table}
+
+
+
+
+\section{matching}
+
+
+\begin{table}[H]
+  \center
+  \caption {Case attraction in headless relatives - only matching}
+    \begin{tabular}{c|c|c|c}
+      \toprule
+        \diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
+            & [\ac{nom}]
+            & [\ac{acc}]
+            & [\ac{dat}]
+            \\ \cmidrule{1-4}
+        [\ac{nom}]
+            & \colorbox{LG}{\ac{nom}}
+            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+            \\ \cmidrule{1-4}
+        [\ac{acc}]
+            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+            & \colorbox{LG}{\ac{acc}}
+            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+            \\ \cmidrule{1-4}
+        [\ac{dat}]
+            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+            & \colorbox{LG}{\ac{dat}}
+            \\
+      \bottomrule
+    \end{tabular}
+\end{table}
+
+
+
+
+
+\section{non-matching}
 
 \ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{acc}
 \a. \ac{nom} not attested
@@ -42,17 +122,17 @@
 
 \input{tables/gothic-grammaticality.tex}
 
-\ex. \ac{nom} < \ac{acc} < \ac{dat}
+\ex. \ac{nom} - \ac{acc} - \ac{dat}
 
-\phantom{x}
+\phantom{nom}
 
 
 
 \section{The accessibility hierarchy}
 
-\ex. \ac{nom} < \ac{acc} < \ac{dat}
+\ex. \ac{nom} - \ac{acc} - \ac{dat}
 
-\phantom{x}
+gives examples of each of these languages
 
 
 
@@ -136,13 +216,13 @@
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}
 
-\phantom{x}
+\phantom{nom}
 
 \subsection{Suppletion patterns}
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}
 
-\phantom{x}
+\phantom{nom}
 
 \subsubsection{ABB}
 
